pos-print: report for period and operators
Added rest functionality for acquiring reports for given period and operators.

Fixes #10
